# ctinexus

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: code-quality.yml  pypi-publish.yml  tests.yml
EM/: Merger.py  main.py
EM/config/: example.yaml
EM/postprocess/: detectIOC.py  main.py  postprocessor.py
EM/preprocess/: main.py
ET/: LLMCaller.py  LLMTagger.py  main.py  usageCalculator.py
ET/config/: example.yaml
IE/: LLMExtractor.py  LLMcaller.py  demoRetriever.py  main.py  promptConstructor.py  responseParser.py  usageCalculator.py
IE/config/: example.yaml
LP/: LLMCaller.py  LLMLinker.py  Linker.py  UsageCalculator.py  main.py
LP/config/: example.yaml
app/: app.py  cti_processor.py  graph_constructor.py  llm_processor.py
app/config/: base.yaml  config.yaml  cost.json  emConfig.yaml  etConfig.yaml  ieConfig.yaml  ltConfig.yaml  postConfig.yaml
app/data/: data_split.py
app/docs/: cli-guide.md
app/prompts/: ie.jinja
app/utils/: gradio_utils.py  http_server_utils.py  path_utils.py
ctinexus/: __init__.py  app.py  cti_processor.py  graph_constructor.py  llm_processor.py
ctinexus/prompts/: et.jinja
ctinexus/utils/: gradio_utils.py  http_server_utils.py  model_utils.py
data/: README.md  data_split.py
data/annotation/: amd-apple-qualcomm-gpus-leak-ai-data-in-leftoverlocals-attacks.json  (+18 more)
docs/: cli-guide.md  ollama-guide.md
tests/: conftest.py
tools/menu/: menu.json
(+164 files in other folders)
